--- a/index.ipynb
+++ b/index.ipynb
@@ -233,6 +233,7 @@
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
+    "    for dest\n",
     "    travel_destinations[].title()\n"
    ]
   },
