--- a/index.ipynb
+++ b/index.ipynb
@@ -233,7 +233,8 @@
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
-    "    for destination in travel_destination\n",
+    "    for destination in travel_destination:\n",
+    "        destination.tit\n",
     "    travel_destinations[].title()\n"
    ]
   },
