--- a/index.ipynb
+++ b/index.ipynb
@@ -224,8 +224,7 @@
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
-    "    for destination in travel_destinations:\n",
-    "        travel.title()\n",
+    "        travel_destinations.title()\n",
     "        return travel_destinations\n"
    ]
   },
