--- a/index.ipynb
+++ b/index.ipynb
@@ -218,14 +218,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "EOL while scanning string literal (<ipython-input-17-96dc04cac997>, line 3)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-17-96dc04cac997>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    for destination in travel_destinations\"\u001b[0m\n\u001b[0m                                           ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m EOL while scanning string literal\n"
+     ]
+    }
+   ],
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
     "        for destination in travel_destinations\"\n",
-    "            destination\n",
+    "            destination.title()\n",
     "        return travel_destinations\n"
    ]
   },
