--- a/index.ipynb
+++ b/index.ipynb
@@ -226,7 +226,7 @@
     "def capitalize_countries():\n",
     "        for destination in travel_destinations:\n",
     "            destination.title()\n",
-    "        return destination\n",
+    "        return travel_destination\n",
     "    \n"
    ]
   },
