--- a/index.ipynb
+++ b/index.ipynb
@@ -233,11 +233,11 @@
     }
    ],
    "source": [
-    "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
+    "    capitalized_countries = []\n",
     "    for destination in travel_destinations:\n",
-    "        destination.title()\n",
-    "travel_destinations    \n"
+    "        capitalized_countries.append(destination.title())\n",
+    "    return capitalized_countries  \n"
    ]
   },
   {
