--- a/index.ipynb
+++ b/index.ipynb
@@ -218,33 +218,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
+    "def capitalize_countries():\n",
+    "    capitalized_countries = []\n",
+    "    for destination in travel_destinations:\n",
+    "        capitalized_countries.append(destination.title())\n",
+    "    return capitalized_countries \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']"
+       "['Argentina', 'Mexico', 'Italy', 'Finland', 'Canada', 'Croatia']"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "def capitalize_countries():\n",
-    "    capitalized_countries = []\n",
-    "    for destination in travel_destinations:\n",
-    "        capitalized_countries.append(destination.title())\n",
-    "    return capitalized_countries  \n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "capitalize_countries() # ['Argentina', 'Mexico', 'Italy', 'Finland', 'Canada', 'Croatia']"
    ]
